--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "capacitor-firebase-auth",
-	"version": "2.3.2",
+	"version": "2.3.3",
 	"description": "Capacitor plugin for Firebase Authentication",
 	"main": "dist/esm/index.js",
 	"types": "dist/esm/index.d.ts",
@@ -8,7 +8,8 @@
 		"build": "npm run clean && tsc",
 		"clean": "rimraf ./dist",
 		"watch": "tsc --watch",
-		"prepublishOnly": "npm run build"
+		"prepublishOnly": "npm run build",
+		"postinstall": "npm run build"
 	},
 	"author": "Bernardo Baumblatt",
 	"license": "MIT",
@@ -16,10 +17,12 @@
 		"@capacitor/core": "latest"
 	},
 	"devDependencies": {
-		"rimraf": "^3.0.0",
-		"typescript": "^3.9.5",
+		"@capacitor/android": "latest",
 		"@capacitor/ios": "latest",
-		"@capacitor/android": "latest"
+		"firebase": "^7.17.1",
+		"rimraf": "^3.0.0",
+		"rxjs": "^6.6.0",
+		"typescript": "^3.9.5"
 	},
 	"peerDependencies": {
 		"firebase": "^7.17.1",
