--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "capacitor-firebase-auth",
+	"name": "@canalcircle/capacitor-firebase-auth",
 	"version": "2.3.3",
 	"description": "Capacitor plugin for Firebase Authentication",
 	"main": "dist/esm/index.js",
@@ -14,7 +14,13 @@
 	"author": "Bernardo Baumblatt",
 	"license": "MIT",
 	"dependencies": {
-		"@capacitor/core": "latest"
+		"@capacitor/core": "latest",
+		"@capacitor/android": "latest",
+		"@capacitor/ios": "latest",
+		"firebase": "^7.17.1",
+		"rimraf": "^3.0.0",
+		"rxjs": "^6.6.0",
+		"typescript": "^3.9.5"
 	},
 	"devDependencies": {
 		"@capacitor/android": "latest",
